<resources>
    <string name="app_name">LoL-UserSearch-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_search_desc">검색할 닉네임을 입력해 주세요</string>
    <string name="txt_all_del">전체 삭제</string>
    <string name="txt_recent_search">최근 검색</string>
    <string name="txt_banned">선택금지:</string>
    <string name="txt_map">맵</string>
    <string name="txt_total_search">전적 검색</string>
    <string name="txt_search">검색</string>
    <string name="txt_spectator">관전</string>
    <string name="txt_search_list">목록</string>
    <string name="txt_summoner_info">소환사 정보</string>
</resources>