<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="410dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_Search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/txt_search_desc"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_search"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_search_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/textView"
                android:layout_width="72dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                android:text="@string/txt_recent_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_allDelete"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:textSize="17sp"
                android:gravity="center"
                android:text="@string/txt_all_del"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <com.airbnb.epoxy.EpoxyRecyclerView
        android:id="@+id/erv_search_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_search_menu"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/epoxy_item_search" />

</androidx.constraintlayout.widget.ConstraintLayout>
